// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tabs.svelte > should handle item value changes 1`] = `
<div>
  <tabs
    class="flex w-full "
    role="listbox"
    tabindex="0"
  >
    <wrap-item
      aria-selected="false"
      class="flex flex-row items-center tab"
      data-path="0"
      role="option"
    >
      <item
        class="flex flex-row items-center"
      >
        <!---->
        <!---->
         
        <p>
          Alpha
        </p>
        <!---->
        <!---->
      </item>
       
      <rkt-icon
        aria-label="Remove"
        class="flex flex-shrink-0 items-center justify-center small"
        role="button"
        tabindex="0"
      >
        <i
          aria-hidden="true"
          class="action-remove"
        />
      </rkt-icon>
      <!---->
    </wrap-item>
    <wrap-item
      aria-selected="true"
      class="flex flex-row items-center tab"
      data-path="1"
      role="option"
    >
      <item
        class="flex flex-row items-center"
      >
        <!---->
        <!---->
         
        <p>
          Beta
        </p>
        <!---->
        <!---->
      </item>
       
      <rkt-icon
        aria-label="Remove"
        class="flex flex-shrink-0 items-center justify-center small"
        role="button"
        tabindex="0"
      >
        <i
          aria-hidden="true"
          class="action-remove"
        />
      </rkt-icon>
      <!---->
    </wrap-item>
    <wrap-item
      aria-selected="false"
      class="flex flex-row items-center tab"
      data-path="2"
      role="option"
    >
      <item
        class="flex flex-row items-center"
      >
        <!---->
        <!---->
         
        <p>
          Gamma
        </p>
        <!---->
        <!---->
      </item>
       
      <rkt-icon
        aria-label="Remove"
        class="flex flex-shrink-0 items-center justify-center small"
        role="button"
        tabindex="0"
      >
        <i
          aria-hidden="true"
          class="action-remove"
        />
      </rkt-icon>
      <!---->
    </wrap-item>
    <!---->
     
    <rkt-icon
      aria-label="Add Tab"
      class="flex flex-shrink-0 items-center justify-center small"
      role="button"
      tabindex="0"
    >
      <i
        aria-hidden="true"
        class="add"
      />
    </rkt-icon>
    <!---->
  </tabs>
  
</div>
`;

exports[`Tabs.svelte > should render items using custom component 1`] = `
<div>
  <tabs
    class="flex w-full "
    role="listbox"
    tabindex="0"
  >
    <wrap-item
      aria-selected="false"
      class="flex flex-row items-center tab"
      data-path="0"
      role="option"
    >
      <item
        class="flex flex-row items-center"
      >
        <span>
          Alpha
        </span>
        <!---->
      </item>
       
      <!---->
    </wrap-item>
    <wrap-item
      aria-selected="false"
      class="flex flex-row items-center tab"
      data-path="1"
      role="option"
    >
      <item
        class="flex flex-row items-center"
      >
        <span>
          Beta
        </span>
        <!---->
      </item>
       
      <!---->
    </wrap-item>
    <!---->
     
    <!---->
  </tabs>
  
</div>
`;

exports[`Tabs.svelte > should render text array 1`] = `
<div>
  <tabs
    class="flex w-full "
    role="listbox"
    tabindex="0"
  >
    <wrap-item
      aria-selected="false"
      class="flex flex-row items-center tab"
      data-path="0"
      role="option"
    >
      <item
        class="flex flex-row items-center"
      >
        <!---->
        <!---->
         
        <p>
          Alpha
        </p>
        <!---->
        <!---->
      </item>
       
      <!---->
    </wrap-item>
    <wrap-item
      aria-selected="false"
      class="flex flex-row items-center tab"
      data-path="1"
      role="option"
    >
      <item
        class="flex flex-row items-center"
      >
        <!---->
        <!---->
         
        <p>
          Beta
        </p>
        <!---->
        <!---->
      </item>
       
      <!---->
    </wrap-item>
    <!---->
     
    <!---->
  </tabs>
  
</div>
`;

exports[`Tabs.svelte > should render using default field mapping 1`] = `
<div>
  <tabs
    class="flex w-full "
    role="listbox"
    tabindex="0"
  >
    <wrap-item
      aria-selected="false"
      class="flex flex-row items-center tab"
      data-path="0"
      role="option"
    >
      <item
        class="flex flex-row items-center"
      >
        <!---->
        <!---->
        <!---->
        
        
        <!---->
         
        <p>
          Alpha
        </p>
        <!---->
        <!---->
      </item>
       
      <!---->
    </wrap-item>
    <wrap-item
      aria-selected="false"
      class="flex flex-row items-center tab"
      data-path="1"
      role="option"
    >
      <item
        class="flex flex-row items-center"
      >
        <!---->
        <!---->
        <!---->
        
        
        <!---->
         
        <p>
          Beta
        </p>
        <!---->
        <!---->
      </item>
       
      <!---->
    </wrap-item>
    <!---->
     
    <!---->
  </tabs>
  
</div>
`;

exports[`Tabs.svelte > should render using field mappings 1`] = `
<div>
  <tabs
    class="flex w-full "
    role="listbox"
    tabindex="0"
  >
    <wrap-item
      aria-selected="false"
      class="flex flex-row items-center tab"
      data-path="0"
      role="option"
    >
      <item
        class="flex flex-row items-center"
      >
        <!---->
        <!---->
        <!---->
        
        
        <!---->
         
        <p>
          Alpha
        </p>
        <!---->
        <!---->
      </item>
       
      <!---->
    </wrap-item>
    <wrap-item
      aria-selected="false"
      class="flex flex-row items-center tab"
      data-path="1"
      role="option"
    >
      <item
        class="flex flex-row items-center"
      >
        <!---->
        <!---->
        <!---->
        
        
        <!---->
         
        <p>
          Beta
        </p>
        <!---->
        <!---->
      </item>
       
      <!---->
    </wrap-item>
    <!---->
     
    <!---->
  </tabs>
  
</div>
`;

exports[`Tabs.svelte > should support custom icons 1`] = `
<div>
  <tabs
    class="flex w-full "
    role="listbox"
    tabindex="0"
  >
    <wrap-item
      aria-selected="false"
      class="flex flex-row items-center tab"
      data-path="0"
      role="option"
    >
      <item
        class="flex flex-row items-center"
      >
        <!---->
        <!---->
         
        <p>
          Alpha
        </p>
        <!---->
        <!---->
      </item>
       
      <!---->
    </wrap-item>
    <wrap-item
      aria-selected="false"
      class="flex flex-row items-center tab"
      data-path="1"
      role="option"
    >
      <item
        class="flex flex-row items-center"
      >
        <!---->
        <!---->
         
        <p>
          Beta
        </p>
        <!---->
        <!---->
      </item>
       
      <!---->
    </wrap-item>
    <!---->
     
    <!---->
  </tabs>
  
</div>
`;

exports[`Tabs.svelte > should support editable attribute 1`] = `
<div>
  <tabs
    class="flex w-full "
    role="listbox"
    tabindex="0"
  >
    <wrap-item
      aria-selected="false"
      class="flex flex-row items-center tab"
      data-path="0"
      role="option"
    >
      <item
        class="flex flex-row items-center"
      >
        <!---->
        <!---->
         
        <p>
          Alpha
        </p>
        <!---->
        <!---->
      </item>
       
      <!---->
    </wrap-item>
    <wrap-item
      aria-selected="false"
      class="flex flex-row items-center tab"
      data-path="1"
      role="option"
    >
      <item
        class="flex flex-row items-center"
      >
        <!---->
        <!---->
         
        <p>
          Beta
        </p>
        <!---->
        <!---->
      </item>
       
      <!---->
    </wrap-item>
    <!---->
     
    <!---->
  </tabs>
  
</div>
`;
